Adiciona botão linkedin

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
 </head>
 <body>
     <h1>Rodrigo de Souza Fernandes</h1>
-    <img src="image/67133778_2473981385957631_7157202947380609024_o.jpg" alt="Rodrigo de Souza" width="300px">
+    <img id="rodrigofoto" src="image/rodrigo.jpg" alt="Rodrigo de Souza" width="300px">
     <p>Olá, meu nome é Rodrigo, moro na cidade de Betim em Minas Gerais e estou iniciando minha carreia de sucesso em desenvolvimento web na Trybe!.</p>
+
     
     <ul>Habilidades</ul>
     <li>Autoconfiança</li>
     <li>Capacidade de adaptação</li>
     <li>Espírito de equipe</li>
     <li>Inteligência emocional</li>
+
+    <p><a href="#rodrigofoto">Foto</a></p>
+    <a href="https://www.linkedin.com/in/rodrigo-de-souza-fernandes-23348810a/"><img src="image/linkedin.jpeg" alt="LINKEDIN" width="100px"></a>
     
+
 </body>
