--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <head>
 <title>Portifólio - Rodrigo de Souza Fernandes</title>
-<meta charset="utf-8">              
+<meta charset="utf-8">  
+<style>
+
+body{
+    color: white;
+    background-color: black;
+    }
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.radius100{border-radius: 100%;}
+.radius10{border-radius: 10%;}
+
+
+</style>            
 </head>
 <body>
     <h1>Rodrigo de Souza Fernandes</h1>
-    <img id="rodrigofoto" src="image/rodrigo.jpg" alt="Rodrigo de Souza" width="300px">
+    <img class="radius100" id="rodrigofoto" src="image/rodrigo.jpg" alt="Rodrigo de Souza" width="100px">
     <p>Olá, meu nome é Rodrigo, moro na cidade de Betim em Minas Gerais e estou iniciando minha carreia de sucesso em desenvolvimento web na Trybe!.</p>
 
     
@@ -16,7 +30,7 @@
     <li>Inteligência emocional</li>
 
     <p><a href="#rodrigofoto">Foto</a></p>
-    <a href="https://www.linkedin.com/in/rodrigo-de-souza-fernandes-23348810a/"><img src="image/linkedin.jpeg" alt="LINKEDIN" width="100px"></a>
+    <a href="https://www.linkedin.com/in/rodrigo-de-souza-fernandes-23348810a/"><img class="radius10" src="image/linkedin.jpeg" alt="LINKEDIN" width="100px"></a>
     
 
 </body>
