--- a/index.html
+++ b/index.html
@@ -1,47 +1,22 @@
 <!DOCTYPE html>
-<head>
-<title>Portifólio - Rodrigo de Souza Fernandes</title>
-<meta charset="utf-8">  
-<style>
-
-body{
-    color: white;
-    background-color: rgb(0, 2, 82);
-    }
-h1{
-    font-family: Arial, Helvetica, sans-serif;
-}
-.italic{
-    font-style: italic;
-}
-.radius100{border-radius: 100%;}
-.radius10{border-radius: 10%;}
-.white-background{background-color: white;}
-.list-title{
-    font-size: 20px;
-    font-weight: 700;
-
-}
-
-
-
-</style>            
-</head>
-<body>
-    
-    <img class="radius100" id="rodrigofoto" src="image/rodrigo.jpg" alt="Rodrigo de Souza" width="100px">
-    <h1>Rodrigo de Souza Fernandes</h1>
-    <p class="italic">Olá, meu nome é Rodrigo, moro na cidade de Betim em Minas Gerais<br> e estou iniciando minha carreia de sucesso em desenvolvimento web na Trybe!.</p>
-
-    
-    <ul class="list-title">Habilidades</ul>
-    <li>Autoconfiança</li>
-    <li>Capacidade de adaptação</li>
-    <li>Espírito de equipe</li>
-    <li>Inteligência emocional</li>
-
-    <p><a href="#rodrigofoto">Início</a></p>
-    <a href="https://www.linkedin.com/in/rodrigo-de-souza-fernandes-23348810a/"><img class="radius10" src="image/linkedin.jpeg" alt="LINKEDIN" width="100px"></a>
-    <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=Cj0KCQjw8rT8BRCbARIsALWiOvQrGQO_f6bnWOFtn65Ud0E4rebeH_y1MDu8dyhDeTMSl_F_gCIj35YaAl_LEALw_wcB"><img class="radius10 white-background" src="image/trybe-logo.png" alt="TRYBE" width="100px"></a>
-
-</body>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <div class="title">
+                <h1>RODRIGO DE SOUZA FERNANDES</h1>
+                <h2>Estudante de desenvolvimento web</h2>
+            </div>
+            <div class="button-header-container">
+                <p>Sobre mim</p>
+                <p>Projetos</p>
+                <p>Contato</p>
+            </div>
+        </header>
+    </body>
+</html>
