texto 'sobre mim' implementado

--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
                 <p>Contato</p>
             </div>
         </header>
+        <main class="about-me">
+            <div class="photo-of-me">
+                <img src="image/rodrigo.jpeg" alt="Rodrigo de Souza Fernandes">
+            </div>
+            <div class="text">
+                <h2>Sobre mim</h2>
+                <p>Estudante de desenvolvimento de softwares e futuro dev, caí de paraquedas no meio da tecnologia
+                    e acabei descobrindo uma enorme paixão por essa área.
+                </p>
+                <p>
+                    Até o ano de 2020 venho trilhando meu caminho profissional totalmente perdido, não me encaixava em nenhuma área,
+                    não sabia muito bem em que área eu gostaria de me desenvolver, e fui levando a vida com empregos básicos,
+                    com remuneração básica, o suficiente para sobreviver, mas sem entusiasmo, sem progresso, o que me deixava muito desanimado.
+                </p>
+                <p>
+                    Até que conheci a Trybe, e vi uma porta se abrindo, uma grande oportunidade de me tornar um grande profissional e trilhar meu
+                    caminho de campeão. Me dediquei ao máximo nos estudos para passar no processo seletivo, mesmo nunca tendo nenhum contato com programação antes.
+                    E depois de todos os testes e entrevistas, finalmente aqui estou, determinado a evoluir cada vez mais e a conquistar meu lugar no mercado de trabalho.
+                </p>
+            </div>
+        </main>
     </body>
 </html>
