--- a/index.html
+++ b/index.html
@@ -39,5 +39,28 @@
                 </p>
             </div>
         </main>
+        <section class="projetos">
+            <h3>Alguns projetos desenvolvidos ao longo do curso...</h3>
+            <div class="pixels-art">
+                <h2>Pixels art</h2>
+                <p>Desenvolver um quadro de pixels, e dar funcionalidades a ele usando javascript</p>
+                <img class="projects-images" src="image/pixelsart.jpeg" alt="Projeto Pixels art">
+            </div>
+            <div class="shopping-cart">
+                <h2>Shopping Cart</h2>
+                <p>Um projeto onde simulamos um carrinho de compras online, praticando requisições a API's</p>
+                <img class="projects-images" src="image/shoppingcart.jpeg" alt="Projeto carrinho de compras">
+            </div>
+            <div class="project-todolist">
+                <h2>To do list</h2>
+                <p>Desenvolver uma lista de tarefas básica, para praticar interações com o DOM</p>
+                <img class="projects-images" src="image/todolist.jpeg" alt="Projeto Lista de tarefas">
+            </div>
+            <div>
+                <h2>Meme generator</h2>
+                <p>Desenvolver um gerador de memes</p>
+                <img class="projects-images" src="image/MEME-GENERATOR.jpeg" alt="ptojeto Gerador de memes">
+            </div>
+        </section>
     </body>
 </html>
