--- a/index.html
+++ b/index.html
@@ -62,5 +62,18 @@
                 <img class="projects-images" src="image/MEME-GENERATOR.jpeg" alt="ptojeto Gerador de memes">
             </div>
         </section>
+        <footer>
+            <h2>Entre em contato:</h2><hr>
+            <div class="whatsapp">
+                <img class='wpp-logo' src="image/WhatsApp-Logo.png" alt="whatsapp">
+                <h2>(31) 9 8769-6267</h2>
+            </div>
+            <hr>
+            <div class="redes-sociais">
+                <img src="image/linkedin.png" alt="linkedin">
+                <img src="image/instagram.webp" alt="instagram">
+                <img src="image/github.png" alt="github">
+            </div>
+        </footer>
     </body>
 </html>
