--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img class='wpp-logo' src="image/WhatsApp-Logo.png" alt="whatsapp">
                 <h2>(31) 9 8769-6267</h2>
             </div>
-            <hr>
+            <hr class="hr">
             <div class="redes-sociais">
                 <img id="linkedin" src="image/linkedin.png" alt="linkedin">
                 <img id="instagram" src="image/instagram.webp" alt="instagram">
