--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <p id="contato">Contato</p>
             </div>
         </header>
-        <main class="about-me">
+        <main class="about-me" id="about-me-here">
             <div class="photo-of-me">
-                <img id="about-me-here" src="image/rodrigo.jpeg" alt="Rodrigo de Souza Fernandes">
+                <img src="image/rodrigo.jpeg" alt="Rodrigo de Souza Fernandes">
             </div>
             <div class="text">
                 <h2 >Sobre mim</h2>
