mudanças na fonte

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifólio - Rodrigo de Souza</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Sacramento&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="title">
                 <h1>RODRIGO DE SOUZA FERNANDES</h1>
-                <h2>Estudante de desenvolvimento web</h2>
+                <p>Estudante de desenvolvimento web</p>
             </div>
             <div class="button-header-container">
                 <p id="about-me">Sobre mim</p>
