--- a/index.html
+++ b/index.html
@@ -1,82 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portifólio - Rodrigo de Souza</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Sacramento&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <div class="title">
-                <h1>RODRIGO DE SOUZA FERNANDES</h1>
-                <p>Estudante de desenvolvimento web</p>
+    <title>Document</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</head>
+<body>
+    <nav class="navbar" >
+        <div class="max-width">
+            <div class="logo"><a href="#">Portifo<span>lio.</span></a></div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Teams</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Rodrigo de Souza</div>
+                <div class="text-3">And I am a <span>Dev</span></div>
             </div>
-            <div class="button-header-container">
-                <p id="about-me">Sobre mim</p>
-                <p id="projetos">Projetos</p>
-                <p id="contato">Contato</p>
-            </div>
-        </header>
-        <main class="about-me" id="about-me-here">
-            <div class="photo-of-me">
-                <img src="image/rodrigo.jpeg" alt="Rodrigo de Souza Fernandes">
-            </div>
-            <div class="text">
-                <h2 >Sobre mim</h2>
-                <p>Estudante de desenvolvimento de softwares e futuro dev, caí de paraquedas no meio da tecnologia
-                    e acabei descobrindo uma enorme paixão por essa área.
-                </p>
-                <p>
-                    Até o ano de 2020 venho trilhando meu caminho profissional totalmente perdido, não me encaixava em nenhuma área,
-                    não sabia muito bem em que área eu gostaria de me desenvolver, e fui levando a vida com empregos básicos,
-                    com remuneração básica, o suficiente para sobreviver, mas sem entusiasmo, sem progresso, o que me deixava muito desanimado.
-                </p>
-                <p>
-                    Até que conheci a Trybe, e vi uma porta se abrindo, uma grande oportunidade de me tornar um grande profissional e trilhar meu
-                    caminho de campeão. Me dediquei ao máximo nos estudos para passar no processo seletivo, mesmo nunca tendo nenhum contato com programação antes.
-                    E depois de todos os testes e entrevistas, finalmente aqui estou, determinado a evoluir cada vez mais e a conquistar meu lugar no mercado de trabalho.
-                </p>
-            </div>
-        </main>
-        <section class="projetos">
-            <h3 id="projetos-here">Alguns projetos desenvolvidos ao longo do curso...</h3>
-            <div class="pixels-art">
-                <h2>Pixels art</h2>
-                <p>Desenvolver um quadro de pixels, e dar funcionalidades a ele usando javascript</p>
-                <img class="projects-images" src="image/pixelsart.jpeg" alt="Projeto Pixels art">
-            </div>
-            <div class="shopping-cart">
-                <h2>Shopping Cart</h2>
-                <p>Um projeto onde simulamos um carrinho de compras online, praticando requisições a API's</p>
-                <img class="projects-images" src="image/shoppingcart.jpeg" alt="Projeto carrinho de compras">
-            </div>
-            <div class="project-todolist">
-                <h2>To do list</h2>
-                <p>Desenvolver uma lista de tarefas básica, para praticar interações com o DOM</p>
-                <img class="projects-images" src="image/todolist.jpeg" alt="Projeto Lista de tarefas">
-            </div>
-            <div class="meme-generator">
-                <h2>Meme generator</h2>
-                <p>Desenvolver um gerador de memes</p>
-                <img class="projects-images" src="image/MEME-GENERATOR.jpeg" alt="ptojeto Gerador de memes">
-            </div>
-        </section>
-        <footer>
-            <h2 id="contato-here" >Entre em contato:</h2><hr>
-            <div class="whatsapp">
-                <img class='wpp-logo' src="image/WhatsApp-Logo.png" alt="whatsapp">
-                <h2>(31) 9 8769-6267</h2>
-            </div>
-            <hr class="hr">
-            <div class="redes-sociais">
-                <img id="linkedin" src="image/linkedin.png" alt="linkedin">
-                <img id="instagram" src="image/instagram.webp" alt="instagram">
-                <img id="github" src="image/github.png" alt="github">
-            </div>
-        </footer>
-        <script src="script.js"></script>
-    </body>
+        </div>
+    </section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae pariatur in non neque, possimus iure nesciunt, sed odio illum inventore dolor modi. Doloribus sint ab nostrum ex obcaecati fugiat. Nobis officiis numquam animi ut temporibus iure nemo soluta, modi earum omnis velit vero cupiditate voluptatem sed id, laborum assumenda placeat nisi quis ipsam sequi aut nulla nam deleniti. Molestias deleniti pariatur officiis enim dolores sit aspernatur nobis quae quidem accusamus repudiandae, dolore reiciendis est molestiae suscipit architecto dolorum similique eligendi consequatur odit, laborum expedita. Eos vel reiciendis eum, quidem expedita quisquam illo, minus commodi, amet quia perferendis? Nobis amet facilis earum, natus modi ut officia incidunt maiores beatae error tempore sunt quia possimus iusto odit nam consectetur voluptatem illo cum omnis ullam est nesciunt laudantium. Reprehenderit odit nesciunt repudiandae! Aliquam doloremque ut, illum fugit delectus quo temporibus! Dolorem tempora repellat quae veniam quaerat impedit molestiae voluptatibus quidem non laboriosam magnam hic, excepturi fuga minima, alias unde! Numquam voluptates tempora ut deleniti fugiat nisi optio ullam aut expedita vitae, eius aspernatur fugit ipsa quisquam saepe explicabo, culpa dolorem rerum commodi, ipsum hic? Ut officiis qui minima harum! Voluptas numquam itaque necessitatibus impedit sapiente quidem possimus fugiat omnis consequatur, illo aliquid eum.</p>
+    <script src="script.js" ></script>
+</body>
 </html>
