portifolio pagina home e about

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
 </head>
 <body>
     <nav class="navbar" >
@@ -21,18 +21,39 @@
                 <li><a href="#">Teams</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </nav>
+    <!-- home section -->
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Rodrigo de Souza</div>
                 <div class="text-3">And I am a <span>Dev</span></div>
+                <a href="#" >Hire me</a>
             </div>
         </div>
     </section>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae pariatur in non neque, possimus iure nesciunt, sed odio illum inventore dolor modi. Doloribus sint ab nostrum ex obcaecati fugiat. Nobis officiis numquam animi ut temporibus iure nemo soluta, modi earum omnis velit vero cupiditate voluptatem sed id, laborum assumenda placeat nisi quis ipsam sequi aut nulla nam deleniti. Molestias deleniti pariatur officiis enim dolores sit aspernatur nobis quae quidem accusamus repudiandae, dolore reiciendis est molestiae suscipit architecto dolorum similique eligendi consequatur odit, laborum expedita. Eos vel reiciendis eum, quidem expedita quisquam illo, minus commodi, amet quia perferendis? Nobis amet facilis earum, natus modi ut officia incidunt maiores beatae error tempore sunt quia possimus iusto odit nam consectetur voluptatem illo cum omnis ullam est nesciunt laudantium. Reprehenderit odit nesciunt repudiandae! Aliquam doloremque ut, illum fugit delectus quo temporibus! Dolorem tempora repellat quae veniam quaerat impedit molestiae voluptatibus quidem non laboriosam magnam hic, excepturi fuga minima, alias unde! Numquam voluptates tempora ut deleniti fugiat nisi optio ullam aut expedita vitae, eius aspernatur fugit ipsa quisquam saepe explicabo, culpa dolorem rerum commodi, ipsum hic? Ut officiis qui minima harum! Voluptas numquam itaque necessitatibus impedit sapiente quidem possimus fugiat omnis consequatur, illo aliquid eum.</p>
+    <!-- about section -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="image/rodrigo.jpeg">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm rodrigo and I'm a <span>dev</span></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et impedit, voluptas id quod cumque voluptatum vero soluta minima odit quasi suscipit accusantium nobis minus illum distinctio, vitae pariatur natus aspernatur nemo debitis eveniet, illo ab! Doloremque mollitia consequatur at dolores sed nemo exercitationem iure necessitatibus fugit nisi accusamus aliquam magni illum dolorem ducimus maiores, pariatur architecto odio! Amet, numquam reiciendis.</p>
+                    <a href="#">Download cv</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- services section -->
     <script src="script.js" ></script>
 </body>
 </html>
