olw carousel nao funciona

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+
 </head>
+
 <body>
     <nav class="navbar" >
         <div class="max-width">
@@ -53,7 +57,100 @@
             </div>
         </div>
     </section>
-    <!-- services section -->
+    <!-- skills section -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills & experience</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt at, natus voluptate fuga temporibus commodi maiores porro provident cum rem laborum quibusdam quasi fugiat ex? Voluptatem rem modi minus eveniet illum, accusantium similique! Ratione quo ipsam iusto. Nobis amet consequuntur nulla suscipit corrupti ab. Dolor ut quasi nostrum. Laboriosam fugiat voluptatem dolores autem necessitatibus, laudantium sint dicta odio officia sunt!</p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line css"></div>
+                        <div class="info">
+                            <span>Javascript</span>
+                            <span>75%</span>
+                        </div>
+                        <div class="line javascript"></div>
+                        <div class="info">
+                            <span>React.js</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line react"></div>
+                        <div class="info">
+                            <span>Git</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line git"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- team section start -->
+    <section class="projects" id="projects">
+        <div class="max-width">
+            <h2 class="title">My projects</h2>
+            <div class="carousel owl-carousel">
+                <div class="card ">
+                    <div class="box">
+                        <img src='image/pixelsart.jpeg'' alt="">
+                        <div class="text">some name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src='image/pixelsart.jpeg'' alt="">
+                        <div class="text">some name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src='image/pixelsart.jpeg'' alt="">
+                        <div class="text">some name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src='image/pixelsart.jpeg'' alt="">
+                        <div class="text">some name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src='image/pixelsart.jpeg'' alt="">
+                        <div class="text">some name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src='image/pixelsart.jpeg'' alt="">
+                        <div class="text">some name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
     <script src="script.js" ></script>
 </body>
 </html>
