--- a/index.html
+++ b/index.html
@@ -1,70 +1,109 @@
 <!DOCTYPE html>
+<!-- Created By CodingNepal -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" ></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
-
 <body>
-    <nav class="navbar" >
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+    <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portifo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Teams</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
         </div>
     </nav>
-    <!-- home section -->
+
+    <!-- home section start -->
     <section class="home" id="home">
-        <div class="max-width">
+      <div class="max-width">
+          <div class="row">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
+                <div class="text-1">Olá, meu nome é</div>
                 <div class="text-2">Rodrigo de Souza</div>
-                <div class="text-3">And I am a <span>Dev</span></div>
-                <a href="#" >Hire me</a>
+                <div class="text-3">E eu sou <span class="typing"></span></div>
+                <a href="#">Contrate me</a>
             </div>
-        </div>
+          </div>
+      </div>
     </section>
-    <!-- about section -->
+
+    <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title">Sobre mim</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="image/rodrigo.jpeg">
+                    <img src="image/rodrigo.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm rodrigo and I'm a <span>dev</span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et impedit, voluptas id quod cumque voluptatum vero soluta minima odit quasi suscipit accusantium nobis minus illum distinctio, vitae pariatur natus aspernatur nemo debitis eveniet, illo ab! Doloremque mollitia consequatur at dolores sed nemo exercitationem iure necessitatibus fugit nisi accusamus aliquam magni illum dolorem ducimus maiores, pariatur architecto odio! Amet, numquam reiciendis.</p>
-                    <a href="#">Download cv</a>
+                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
                 </div>
             </div>
         </div>
     </section>
-    <!-- skills section -->
+
+    <!-- services section start -->
+    <!-- <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">My services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Web Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Advertising</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                    </div>
+                </div>
+               </div>
+            </div>
+        </div>
+    </section> -->
+
+    <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">My skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experience</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt at, natus voluptate fuga temporibus commodi maiores porro provident cum rem laborum quibusdam quasi fugiat ex? Voluptatem rem modi minus eveniet illum, accusantium similique! Ratione quo ipsam iusto. Nobis amet consequuntur nulla suscipit corrupti ab. Dolor ut quasi nostrum. Laboriosam fugiat voluptatem dolores autem necessitatibus, laudantium sint dicta odio officia sunt!</p>
+                    <div class="text">My creative skills & experiences.</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -74,83 +113,140 @@
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
+                    </div>
+                    <div class="bars">
                         <div class="info">
                             <span>CSS</span>
                             <span>60%</span>
                         </div>
                         <div class="line css"></div>
+                    </div>
+                    <div class="bars">
                         <div class="info">
-                            <span>Javascript</span>
-                            <span>75%</span>
-                        </div>
-                        <div class="line javascript"></div>
-                        <div class="info">
-                            <span>React.js</span>
+                            <span>JavaScript</span>
                             <span>80%</span>
                         </div>
-                        <div class="line react"></div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
                         <div class="info">
-                            <span>Git</span>
-                            <span>70%</span>
+                            <span>React.js</span>
+                            <span>75%</span>
                         </div>
-                        <div class="line git"></div>
+                        <div class="line react"></div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- team section start -->
-    <section class="projects" id="projects">
-        <div class="max-width">
-            <h2 class="title">My projects</h2>
-            <div class="carousel owl-carousel">
-                <div class="card ">
-                    <div class="box">
-                        <img src='image/pixelsart.jpeg'' alt="">
-                        <div class="text">some name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src='image/pixelsart.jpeg'' alt="">
-                        <div class="text">some name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src='image/pixelsart.jpeg'' alt="">
-                        <div class="text">some name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src='image/pixelsart.jpeg'' alt="">
-                        <div class="text">some name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src='image/pixelsart.jpeg'' alt="">
-                        <div class="text">some name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src='image/pixelsart.jpeg'' alt="">
-                        <div class="text">some name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, deserunt?</p>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Testes</span>
+                            <span>40%</span>
+                        </div>
+                        <div class="line testes"></div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    
-    <script src="script.js" ></script>
+    <!-- teams section start -->
+    <section class="teams" id="teams">
+        <div class="max-width">
+            <h2 class="title">My teams</h2>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="image/projects/trybeWallet.jpeg" alt="">
+                        <div class="text">Meme Generator</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="image/projects/countdown.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="image/projects/pixelsart.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="image/projects/MEME-GENERATOR.jpeg" alt="">
+                        <div class="text">Someone name</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Prakash Shahi</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Surkhet, Nepal</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">abc@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form class="contact-form" action="#" method="POST">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" class="fullname" placeholder="Name">
+                            </div>
+                            <div class="field email">
+                                <input type="text" class="email-input" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" class="subject" placeholder="Subject">
+                        </div>
+                        <div class="field textarea">
+                            <textarea class="message" cols="30" rows="10" placeholder="Message.."></textarea>
+                        </div>
+                        <div class="button-area">
+                            <button class="send-msg" type="submit" name="send">Send message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
