--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -24,9 +24,8 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#teams" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -43,7 +42,6 @@
                 <div class="text-1">Olá, meu nome é</div>
                 <div class="text-2">Rodrigo de Souza</div>
                 <div class="text-3">E eu sou <span class="typing"></span></div>
-                <a href="#">Contrate me</a>
             </div>
           </div>
       </div>
@@ -58,53 +56,26 @@
                     <img src="image/rodrigo.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                    <div class="text">Oi, eu sou o Rodrigo e eu sou<span class="typing-2"></span></div>
+                    <p>Estudante de Desenvolvimento de Software, em transição de carreira, sem medo de mudar e sempre buscando evoluir. Recém chegado na área de tecnologia e nesse momento posso dizer com firmeza que encontrei o meu lugar e o meu principal objetivo, que é construir minha carreira nessa área.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- services section start -->
-    <!-- <section class="services" id="services">
-        <div class="max-width">
-            <h2 class="title">My services</h2>
-            <div class="serv-content">
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-               </div>
-            </div>
-        </div>
-    </section> -->
-
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
+            <h2 class="title">Minhas skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-                    <a href="#">Read more</a>
+                    <div class="text">Habilidades</div>
+                    <p>Desde que decidi entrar no mundo da tecnologia, sigo estudando muito e aprendendo bastante,
+                        a cada mês, é perceptivel uma enorme evolução nas minhas hard skills, me sinto cada vez mais
+                        capaz e confiante. Mas além disso também tive a oportunidade de conhecer a mim mesmo e desenvolver
+                    minhas soft skills e pude perceber que é um diferencial no ambiente de trabalho, hoje sou mais colaborativo,
+                    resiliente, organizado, pude entender mais sobre empatia e entender que é necessario um desenvolvimento constante como pessoa.
+                    </p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -150,35 +121,42 @@
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <h2 class="title">Projetos</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
-                    <div class="box">
+                    <a href="https://www.linkedin.com/posts/rodrigo-de-souza-fernandes_trybe-backend-frontend-activity-6784917039879372800-IG4v" class="box">
+                        <img src="image/projects/recipesapp.jpeg" alt="">
+                        <div class="text">Recipes App</div>
+                        <p>App de receitas, desenvolvido em React com context API.</p>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://www.linkedin.com/posts/rodrigo-de-souza-fernandes_trybe-gotrybe-vqv-activity-6772260512035061760-KHrE" class="box">
                         <img src="image/projects/trybeWallet.jpeg" alt="">
-                        <div class="text">Meme Generator</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
+                        <div class="text">Trybe Wallet</div>
+                        <p>Carteira com conversor de moedas, desenvilvido em React com Redux.</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <div class="box">
+                    <a href="https://www.linkedin.com/posts/rodrigo-de-souza-fernandes_trybe-gotrybe-frontend-activity-6756731676388311040-RD4O" class="box">
                         <img src="image/projects/countdown.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
+                        <div class="text">Trybe Countdown</div>
+                        <p>Contador feito em React, para marcar os intervalos da turma 08.</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <div class="box">
+                    <a href="https://www.linkedin.com/posts/rodrigo-de-souza-fernandes_trybe-frontend-softwaredev-activity-6745082554094800896-4gcI" class="box">
                         <img src="image/projects/pixelsart.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
+                        <div class="text">Pixels Art</div>
+                        <p>Um quadro de pixels, um dos meus primeiros projetos em Javascript.</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <div class="box">
+                    <a href="https://www.linkedin.com/posts/rodrigo-de-souza-fernandes_gotrybe-foguetenaotemre-vqv-activity-6734157864832704512-JzUB" class="box">
                         <img src="image/projects/MEME-GENERATOR.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
+                        <div class="text">Meme Generator</div>
+                        <p>Gerador de memes, feito em Javascript.</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -187,57 +165,38 @@
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact me</h2>
+            <h2 class="title">Contate me</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">Rodrigo de Souza Fernandes</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">rdesouza2008@gmail.com</div>
                             </div>
+                        </div>
+                        <div class="column right">
+                            <a class="link" href="https://www.instagram.com/rodrigo.fernandes95/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a class="link" href="https://www.linkedin.com/in/rodrigo-de-souza-fernandes/">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a class="link" href="https://github.com/rodrigoDeSouzaFernandes">
+                                <i class="fab fa-github"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="column right">
-                    <div class="text">Message me</div>
-                    <form class="contact-form" action="#" method="POST">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" class="fullname" placeholder="Name">
-                            </div>
-                            <div class="field email">
-                                <input type="text" class="email-input" placeholder="Email">
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" class="subject" placeholder="Subject">
-                        </div>
-                        <div class="field textarea">
-                            <textarea class="message" cols="30" rows="10" placeholder="Message.."></textarea>
-                        </div>
-                        <div class="button-area">
-                            <button class="send-msg" type="submit" name="send">Send message</button>
-                        </div>
-                    </form>
-                </div>
+                
             </div>
         </div>
     </section>
